--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/ThirdPerson/Blueprints/Lobby/BP_GameInstanceMulty.BP_GameInstanceMulty_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
