cambios antes de enpaquetar

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,15 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C4A4443A46387247C5702CA90B707C35
 ProjectName=Third Person BP Game Template
+bAllowMinimize=True
+bAllowMaximize=True
+bUseBorderlessWindow=False
+bShouldWindowPreserveAspectRatio=False
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
